connect to mongo and add auth
