# src/models/user.model.ts
@@ -1,0 +1,34 @@
+import { IRole } from "@/models/role.model";
+import mongoose, { Document } from "mongoose";
+
+export interface IUser extends Document {
+  username: string;
+  email: string;
+  password: string;
+  roles: IRole[];
+}
+
+const UserSchema = new mongoose.Schema({
+  username: {
+    type: String,
+    required: true,
+    unique: true,
+  },
+  email: {
+    type: String,
+    required: true,
+    unique: true,
+  },
+  password: {
+    type: String,
+    required: true,
+  },
+  roles: [
+    {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Role",
+    },
+  ],
+});
+
+export const User = mongoose.model<IUser>("User", UserSchema);
