# src/routes/index.ts
@@ -1,9 +1,23 @@
-import { getUserEndpoint, updateUserEndpoint } from "@/controllers/users.endpoints";
+import { loginEndpoint, registerEndpoint } from "@/controllers/auth.controllers";
+import {
+  getUserEndpoint,
+  getUsersAdminController,
+  getUsersController,
+  getUsersModController,
+  updateUserEndpoint,
+} from "@/controllers/users.controllers";
 import { DependsOnMethod, Routing } from "express-zod-api";
 
 export const routing: Routing = {
   v1: {
-    user: {
+    login: loginEndpoint,
+    register: registerEndpoint,
+    users: {
+      "": new DependsOnMethod({
+        get: getUsersController,
+      }),
+      mod: getUsersModController,
+      admin: getUsersAdminController,
       ":id": new DependsOnMethod({
         get: getUserEndpoint,
         post: updateUserEndpoint,
